# alsa-switch

./: .gitignore  AlsaSwitch.cpp  AlsaSwitchCtl.cpp  CMakeLists.txt
